--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,24 +7,19 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Research
+    url: '#featured'
     weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
   - name: Presentations
     url: 'event/'
+    weight: 30
+  - name: Teaching
+    url: "teaching/"
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
-  - name: Teaching
-    url: "teaching/"
-    weight: 70
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
